--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "config": {
         "platform": {
-            "php": "8.1.0" 
+            "php": "8.3.11" 
         }
     },
     "name": "nicepay/nicepay-php",
@@ -10,7 +10,8 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "Nicepay\\": "Nicepay/"
+            "Nicepay\\": "Nicepay/",
+            "test\\": "test/"
         }
     },
     "autoload-dev": {
@@ -27,12 +28,12 @@
         }
     ],
     "require": {
-        "php": "^8.1",
+        "php": "^8.3",
         "ext-curl": "*",
         "ext-json": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "9.6.x-dev"
+        "phpunit/phpunit": "11.4.x-dev"
     }
     
 }
