--- a/composer.json
+++ b/composer.json
@@ -1,39 +1,32 @@
 {
-    "config": {
-        "platform": {
-            "php": "8.3.11" 
-        }
-    },
-    "name": "nicepay/php-nicepay",
-    "description": "PHP Library for Nicepay Payment API.",
-    "type": "library",
-    "license": "MIT",
-    "autoload": {
-        "psr-4": {
-            "Nicepay\\": "Nicepay/",
-            "test\\": "test/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "test\\": "test/"
-        }
-        
-    },
-    "minimum-stability": "dev",
-    "authors": [
-        {
-            "name": "Nicepay IT Integration",
-            "email": "nicepayintegration@gmail.com"
-        }
-    ],
-    "require": {
-        "php": "^8.3",
-        "ext-curl": "*",
-        "ext-json": "*"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "11.4.x-dev"
+  "name": "nicepay/php-nicepay",
+  "description": "PHP Library for Nicepay Payment API.",
+  "type": "library",
+  "license": "MIT",
+  "autoload": {
+    "psr-4": {
+      "Nicepay\\": "Nicepay/",
+      "test\\": "test/"
     }
-    
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "test\\": "test/"
+    }
+  },
+  "minimum-stability": "dev",
+  "authors": [
+    {
+      "name": "Nicepay IT Integration",
+      "email": "nicepayintegration@gmail.com"
+    }
+  ],
+  "require": {
+    "php": "^7.4 || ^8.0",
+    "ext-curl": "*",
+    "ext-json": "*"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "11.4.x-dev"
+  }
 }
